cmake_minimum_required(VERSION 3.0.0)

# set the project name
project(Chapiter1)

add_executable(Chapiter1 helloworld.cpp)

project(First_Name)

add_executable(First_Name firstname)


project(Interger_Value)

add_executable(Interger_Value integervalue)

project(Computation_Vector)

add_executable(Computation_Vector computation_vector)

project(Sorted_Word)

add_executable(Sorted_Word sortedword)

project(1_4_Drill)

add_executable(1_4_Drill 4_drill)

project(1_4_Exercice_2)

add_executable(1_4_Exercice_2 4_exercice_2)

project(1_4_Exercice_3)

add_executable(1_4_Exercice_3 4_exercice_3)

project(1_4_Exercice_4)

add_executable(1_4_Exercice_4 4_exercice_4)

project(1_4_Exercice_5)

add_executable(1_4_Exercice_5 4_exercice_5)

project(1_4_Exercice_6)

add_executable(1_4_Exercice_6 4_exercice_6)

project(1_4_Exercice_7)

add_executable(1_4_Exercice_7 4_exercice_7)